==> bberrybberry/embeddedJAWB/MSP430/SPI DMA/hal_spi.c <==
#include <msp430.h>
#include "hal_spi.h"

void hal_SPI_Init(spi_settings_t* settings){
	// Disable
	hal_SPI_Disable(settings->channel);
	switch(settings->channel){
		case SPI_A0:
			// Setup MOSI, MISO
			P3SEL |= BIT3 + BIT4;
			// Setup SCLK
			P2SEL |= BIT7;
			// Use SMCLK
			UCA0CTL1 |= UCSSEL_2;
			// Configure settings
			UCA0CTL0 |= (settings->mode & BIT1) ? (UCCKPL) : 0;
			UCA0CTL0 |= (settings->mode & BIT0) ? 0: (UCCKPH);
			UCA0CTL0 |= (settings->hal_settings.msb_first) ? (UCMSB) : 0;
			UCA0CTL0 |= (settings->hal_settings.char7bit) ? (UC7BIT) : 0;
			// Configure bit rate
			UCA0BR0 = FCPU / settings->bit_rate;
			UCA0BR1 = FCPU / settings->bit_rate / 256;
			// Configure DMA
			if (settings->hal_settings.use_dma && settings->hal_settings.DMA_buffer) {
				// If channel 0 isn't enabled yet
				if (~(DMA0CTL & DMAEN)) {
					// Set channel zero to trigger on UCA0 receives something
					DMACTL0 |= DMA0TSEL_16;
					__data16_write_addr((unsigned short) &DMA0SA, (unsigned long) &UCA0RXBUF);
					__data16_write_addr((unsigned short) &DMA0DA, (unsigned long) &settings->hal_settings.DMA_buffer);
					DMA0SZ = settings->hal_settings.dma_buf_size;
					DMA0CTL = DMADT_4 | DMADSTINCR_3 | DMASBDB;
					DMA0CTL |= DMAEN | DMAIE;
				}
				// Or channel 1
				else if(~(DMA1CTL & DMAEN)) {
					// Set channel one to trigger on UCA0 receives something
					DMACTL0 |= DMA1TSEL_16;
					__data16_write_addr((unsigned short) &DMA1SA, (unsigned long) &UCA0RXBUF);
					__data16_write_addr((unsigned short) &DMA1DA, (unsigned long) &settings->hal_settings.DMA_buffer);
					DMA1SZ = settings->hal_settings.dma_buf_size;
					DMA0CTL = DMADT_4 | DMADSTINCR_3 | DMASBDB;
					DMA0CTL |= DMAEN | DMAIE;
				}
				// Or channel 2
				else if(~(DMA2CLT & DMAEN)) {
					// Set channel two to trigger on UCA0 receives something
					DMACTL0 |= DMA2TSEL_16;
					__data16_write_addr((unsigned short) &DMA2SA, (unsigned long) &UCA0RXBUF);
					__data16_write_addr((unsigned short) &DMA2DA, (unsigned long) &settings->hal_settings.DMA_buffer);
					DMA2SZ = settings->hal_settings.dma_buf_size;
					DMA0CTL = DMADT_4 | DMADSTINCR_3 | DMASBDB;
					DMA0CTL |= DMAEN | DMAIE;
				}
				// Turn off DMA in spi settings, user can check if this has changed
				else {
					settings->hal_settings.use_dma = 0;
				}
			}
			break;
		case SPI_A1:
#warning "fix the spi pins for this channel"
			// Setup MOSI, MISO
			P3SEL |= BIT3 + BIT4;
			// Setup SCLK
			P2SEL |= BIT7;
			// Use SMCLK
			UCA1CTL1 |= UCSSEL_2;
			// Configure settings
			UCA1CTL0 |= (settings->mode & BIT1) ? (UCCKPL) : 0;
			UCA1CTL0 |= (settings->mode & BIT0) ? 0: (UCCKPH);
			UCA1CTL0 |= (settings->hal_settings.msb_first) ? (UCMSB) : 0;
			UCA1CTL0 |= (settings->hal_settings.char7bit) ? (UC7BIT) : 0;
			// Configure bit rate
			UCA1BR0 = FCPU / settings->bit_rate;
			UCA1BR1 = FCPU / settings->bit_rate / 256;
			break;
			if (settings->hal_settings.use_dma && settings->hal_settings.DMA_buffer) {
				if (~(DMA0CTL & DMAEN)) {
					DMACTL0 |= DMA0TSEL_16;
					__data16_write_addr((unsigned short) &DMA0SA, (unsigned long) &UCA1RXBUF);
					__data16_write_addr((unsigned short) &DMA0DA, (unsigned long) &settings->hal_settings.DMA_buffer);
					DMA0SZ = settings->hal_settings.dma_buf_size;
					DMA0CTL = DMADT_4 | DMADSTINCR_3 | DMASBDB;
					DMA0CTL |= DMAEN | DMAIE;
				}
				else if(~(DMA1CTL & DMAEN)) {
					DMACTL0 |= DMA1TSEL_16;
					__data16_write_addr((unsigned short) &DMA1SA, (unsigned long) &UCA1RXBUF);
					__data16_write_addr((unsigned short) &DMA1DA, (unsigned long) &settings->hal_settings.DMA_buffer);
					DMA1SZ = settings->hal_settings.dma_buf_size;
					DMA0CTL = DMADT_4 | DMADSTINCR_3 | DMASBDB;
					DMA0CTL |= DMAEN | DMAIE;
				}
				else if(~(DMA2CLT & DMAEN)) {
					DMACTL0 |= DMA2TSEL_16;
					__data16_write_addr((unsigned short) &DMA2SA, (unsigned long) &UCA1RXBUF);
					__data16_write_addr((unsigned short) &DMA2DA, (unsigned long) &settings->hal_settings.DMA_buffer);
					DMA2SZ = settings->hal_settings.dma_buf_size;
					DMA0CTL = DMADT_4 | DMADSTINCR_3 | DMASBDB;
					DMA0CTL |= DMAEN | DMAIE;
				}
				else {
					settings->hal_settings.use_dma = 0;
				}
			}
		case SPI_B0:
			// Setup MOSI, MISO, SCLK
			P3SEL |= BIT0 + BIT1 + BIT2;
			// Use SMCLK
			UCB0CTL1 |= UCSSEL_2;
			// Configure settings
			UCB0CTL0 |= (settings->mode & BIT1) ? (UCCKPL) : 0;
			UCB0CTL0 |= (settings->mode & BIT0) ? 0: (UCCKPH);
			UCB0CTL0 |= (settings->hal_settings.msb_first) ? (UCMSB) : 0;
			UCB0CTL0 |= (settings->hal_settings.char7bit) ? (UC7BIT) : 0;
			UCB0CTL0 |= UCMST;
			// Configure bit rate
			UCB0BR0 = FCPU / settings->bit_rate;
			UCB0BR1 = FCPU / settings->bit_rate / 256;
			break;
			if (settings->hal_settings.use_dma && settings->hal_settings.DMA_buffer) {
				if (~(DMA0CTL & DMAEN)) {
					DMACTL0 |= DMA0TSEL_16;
					__data16_write_addr((unsigned short) &DMA0SA, (unsigned long) &UCB0RXBUF);
					__data16_write_addr((unsigned short) &DMA0DA, (unsigned long) &settings->hal_settings.DMA_buffer);
					DMA0SZ = settings->hal_settings.dma_buf_size;
					DMA0CTL = DMADT_4 | DMADSTINCR_3 | DMASBDB;
					DMA0CTL |= DMAEN | DMAIE;
				}
				else if(~(DMA1CTL & DMAEN)) {
					DMACTL0 |= DMA1TSEL_16;
					__data16_write_addr((unsigned short) &DMA1SA, (unsigned long) &UCB0RXBUF);
					__data16_write_addr((unsigned short) &DMA1DA, (unsigned long) &settings->hal_settings.DMA_buffer);
					DMA1SZ = settings->hal_settings.dma_buf_size;
					DMA0CTL = DMADT_4 | DMADSTINCR_3 | DMASBDB;
					DMA0CTL |= DMAEN | DMAIE;
				}
				else if(~(DMA2CLT & DMAEN)) {
					DMACTL0 |= DMA2TSEL_16;
					__data16_write_addr((unsigned short) &DMA2SA, (unsigned long) &UCB0RXBUF);
					__data16_write_addr((unsigned short) &DMA2DA, (unsigned long) &settings->hal_settings.DMA_buffer);
					DMA2SZ = settings->hal_settings.dma_buf_size;
					DMA0CTL = DMADT_4 | DMADSTINCR_3 | DMASBDB;
					DMA0CTL |= DMAEN | DMAIE;
				}
				else {
					settings->hal_settings.use_dma = 0;
				}
			}
		case SPI_B1:
#warning "fix the spi pins for this channel"
			// Setup MOSI, MISO
			P3SEL |= BIT3 + BIT4;
			// Setup SCLK
			P2SEL |= BIT7;
			// Use SMCLK
			UCB1CTL1 |= UCSSEL_2;
			// Configure settings
			UCB1CTL0 |= (settings->mode & BIT1) ? (UCCKPL) : 0;
			UCB1CTL0 |= (settings->mode & BIT0) ? 0: (UCCKPH);
			UCB1CTL0 |= (settings->hal_settings.msb_first) ? (UCMSB) : 0;
			UCB1CTL0 |= (settings->hal_settings.char7bit) ? (UC7BIT) : 0;
			// Configure bit rate
			UCB1BR0 = FCPU / settings->bit_rate;
			UCB1BR1 = FCPU / settings->bit_rate / 256;
			break;
			if (settings->hal_settings.use_dma && settings->hal_settings.DMA_buffer) {
				if (~(DMA0CTL & DMAEN)) {
					DMACTL0 |= DMA0TSEL_16;
					__data16_write_addr((unsigned short) &DMA0SA, (unsigned long) &UCB1RXBUF);
					__data16_write_addr((unsigned short) &DMA0DA, (unsigned long) &settings->hal_settings.DMA_buffer);
					DMA0SZ = settings->hal_settings.dma_buf_size;
					DMA0CTL = DMADT_4 | DMADSTINCR_3 | DMASBDB;
					DMA0CTL |= DMAEN | DMAIE;
				}
				else if(~(DMA1CTL & DMAEN)) {
					DMACTL0 |= DMA1TSEL_16;
					__data16_write_addr((unsigned short) &DMA1SA, (unsigned long) &UCB1RXBUF);
					__data16_write_addr((unsigned short) &DMA1DA, (unsigned long) &settings->hal_settings.DMA_buffer);
					DMA1SZ = settings->hal_settings.dma_buf_size;
					DMA0CTL = DMADT_4 | DMADSTINCR_3 | DMASBDB;
					DMA0CTL |= DMAEN | DMAIE;
				}
				else if(~(DMA2CLT & DMAEN)) {
					DMACTL0 |= DMA2TSEL_16;
					__data16_write_addr((unsigned short) &DMA2SA, (unsigned long) &UCB1RXBUF);
					__data16_write_addr((unsigned short) &DMA2DA, (unsigned long) &settings->hal_settings.DMA_buffer);
					DMA2SZ = settings->hal_settings.dma_buf_size;
					DMA0CTL = DMADT_4 | DMADSTINCR_3 | DMASBDB;
					DMA0CTL |= DMAEN | DMAIE;
				}
				else {
					settings->hal_settings.use_dma = 0;
				}
			}
		
	}
	hal_SPI_Enable(settings->channel);
	hal_SPI_ClearRxIF(settings->channel);
	hal_SPI_EnableRxInterrupt(settings->channel);
}

void hal_SPI_Enable(uint8_t channel){
	switch(channel){
		case SPI_A0:
			UCA0CTL1 &= ~(UCSWRST);
			break;
		case SPI_A1:
			UCA1CTL1 &= ~(UCSWRST);
			break;
		case SPI_B0:
			UCB0CTL1 &= ~(UCSWRST);
			break;
		case SPI_B1:
			UCB1CTL1 &= ~(UCSWRST);
			break;
		default:
			return;
	}
}

void hal_SPI_Disable(uint8_t channel){
	switch(channel){
		case SPI_A0:
			UCA0CTL1 |= UCSWRST;
			break;
		case SPI_A1:
			UCA1CTL1 |= UCSWRST;
			break;
		case SPI_B0:
			UCB0CTL1 |= UCSWRST;
			break;
		case SPI_B1:
			UCB1CTL1 |= UCSWRST;
			break;
		default:
			return;
	}
}
